<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ett.csz.huacheng.ui.FinishedJobsActivity"
    android:background="@mipmap/bj">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/title_order"
        android:background="@color/topbar"
        android:paddingLeft="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_order"
            style="@style/Activity_Title"
            android:layout_centerInParent="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back4"
            android:onClick="onclickImage"
            android:contentDescription="@string/hello_world"
            android:background="@mipmap/back"
            android:layout_centerVertical="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:onClick="onclickImage"
            android:contentDescription="@string/search"
            android:background="@mipmap/icon_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/JobNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView54"
            style="@style/Title_Table"
            android:layout_weight="1" />

        <TextView
            android:text="@string/projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView55"
            style="@style/Title_Table"
            android:layout_weight="1" />

        <TextView
            android:text="@string/jiedan_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView56"
            style="@style/Title_Table"
            android:layout_weight="1" />

    </LinearLayout>

    <com.ett.csz.huacheng.mylistview.AutoListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lstv" />
</LinearLayout>
