<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bj"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_order"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/topbar"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textview_0"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/my_order"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:id="@+id/button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:textColor="@color/gold"
            android:onClick="onclickLayout" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/JobNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView54"
            style="@style/Title_Table"
            android:layout_weight="1" />

        <TextView
            android:text="@string/projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView55"
            style="@style/Title_Table"
            android:layout_weight="1" />

        <TextView
            android:text="@string/jiedan_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView56"
            style="@style/Title_Table"
            android:layout_weight="1" />

    </LinearLayout>

    <com.ett.csz.huacheng.mylistview.AutoListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unfinished_list"/>
</LinearLayout>
