<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ett.csz.huacheng.ui.EditJobActivity"
    android:background="@mipmap/bj"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/topbar"
        android:gravity="center_vertical"
        android:paddingLeft="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/worksheets_processing"
            android:layout_centerVertical="true"
            style="@style/Activity_Title"
            android:gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back3"
            android:layout_centerVertical="true"
            android:onClick="onclickImage"
            android:contentDescription="@string/hello_world"
            android:background="@mipmap/back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView0"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:layout_width="5dp"
                    android:layout_height="14dp" />

                <TextView
                    android:layout_toRightOf="@+id/textView0"
                    android:layout_centerVertical="true"
                    android:text="@string/job_source"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView47"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp" />

            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_bg"
                android:layout_marginTop="@dimen/abc_action_bar_default_padding_material"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/JobNumber" />

                    <TextView
                        android:id="@+id/textView21"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/SingleState" />

                    <TextView
                        android:id="@+id/textView23"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jiedan_man" />

                    <TextView
                        android:id="@+id/textView25"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jiedan_date" />

                    <TextView
                        android:id="@+id/textView27"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/projectName" />

                    <TextView
                        android:id="@+id/textView29"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:text="@string/hello_world" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/projectAddress" />

                    <TextView
                        android:id="@+id/textView33"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:text="@string/hello_world" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/contact" />

                    <TextView
                        android:id="@+id/textView31"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/telephone" />

                    <TextView
                        android:id="@+id/textView35"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/report_type" />

                    <TextView
                        android:id="@+id/textView37"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />

                    <TextView
                        style="@style/Detail_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/source_from" />

                    <TextView
                        android:id="@+id/textView39"
                        style="@style/Detail_Content_Style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_world" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Detail_Style"
                        android:text="@string/area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/Detail_Content_Style"
                        android:text="@string/hello_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView41"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/Detail_Style"
                        android:text="@string/area_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        style="@style/Detail_Content_Style"
                        android:text="@string/hello_world"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView43"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    style="@style/Detail_Style"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/user_report"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/textView45"
                    style="@style/Detail_Content_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/abc_action_bar_default_padding_material">
                <TextView
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:layout_width="5dp"
                    android:layout_height="14dp"
                    android:id="@+id/textview00001" />

                <TextView
                    android:layout_toRightOf="@+id/textview00001"
                    android:layout_centerVertical="true"
                    android:text="@string/spot"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp"
                    android:id="@+id/textview00002" />

                <ImageView
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/btn_open"
                    android:id="@+id/imageView4"
                    android:layout_toLeftOf="@+id/textView6"
                    android:contentDescription="@string/edit"
                    android:layout_width="18dp"
                    android:layout_marginRight="@dimen/abc_action_bar_default_padding_material" />

                <TextView
                    android:text="@string/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    style="@style/Detail_Style" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
