<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bj" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/title_activity_user_center"
        android:background="@color/topbar"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/myinfo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:onClick="onclickLayout">
        <TextView
            style="@style/Item_style"
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <TextView
            style="@style/Item_style"
            android:id="@+id/usernameview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textview1" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@mipmap/enter_into"
            android:contentDescription="@string/hello_world"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/exitapp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/item_margin"
        android:clickable="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:onClick="onclickLayout">
        <TextView
            style="@style/Item_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@mipmap/enter_into"
            android:contentDescription="@string/hello_world"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>
