<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ett.csz.huacheng.ui.UpdatePWDActivity"
    android:background="@mipmap/bj">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/topbar"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_pwd"
            android:gravity="center"
            style="@style/Activity_Title" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back1"
            android:onClick="onclickImage"
            android:contentDescription="@string/hello_world"
            android:background="@mipmap/back" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="@dimen/item_margin" >
        <TextView
            style="@style/Item_style"
            android:layout_centerVertical="true"
            android:id="@+id/new_pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"
            android:paddingLeft="15sp" />
        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/new_pwd_text"
            android:id="@+id/new_pwd"
            android:background="@drawable/editsharp"
            android:inputType="textPassword" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:paddingLeft="10dp">
        <TextView
            style="@style/Item_style"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/re_pwd_text"
            android:text="@string/re_pwd"/>
        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/re_pwd"
            android:layout_toRightOf="@+id/re_pwd_text"
            android:background="@drawable/editsharp"
            android:inputType="textPassword" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_margin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:baselineAligned="false"
        android:gravity="right">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/submit_btn"
            android:onClick="onclickImage"
            android:clickable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView7"
                android:contentDescription="@string/sure"
                android:background="@mipmap/btn_ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure"
                android:id="@+id/textView"
                style="@style/Btn_style"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_btn"
            android:onClick="onclickImage"
            android:clickable="true">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/imageView8"
                android:contentDescription="@string/cancel"
                android:background="@mipmap/btn_cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/textView2"
                style="@style/Btn_style"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
